force-app/main/default/objects/ResidentLease__c/ResidentLease__c.object-meta.xml
<CustomObject>
    <label>Resident Lease</label>
    <nameField>
        <displayFormat>RL-{00000000}</displayFormat>
        <label>Correlative</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resident Lease &amp; Resident Leases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>