force-app/main/default/objects/ResidentLease__c/fields/ClientAsset__c.field-meta.xml
<CustomField>
    <fullName>ClientAsset__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Client Asset</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Asset.Account.RecordTypeDeveloperName__c</field>
            <operation>equals</operation>
            <value>Client_Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Resident Lease &amp; Resident Leases</relationshipLabel>
    <relationshipName>Resident_Lease_Resident_Leases</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>