force-app/main/default/objects/ResidentLease__c/fields/ResidentAsset__c.field-meta.xml
<CustomField>
    <fullName>ResidentAsset__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Resident Asset</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Asset.Account.RecordTypeDeveloperName__c</field>
            <operation>equals</operation>
            <value>Consumer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Resident Lease &amp; Resident Leases (Resident Asset)</relationshipLabel>
    <relationshipName>Resident_Lease_Resident_Leases1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>