force-app/main/default/objects/ResidentLease__c/fields/ResidentMoveInDate__c.field-meta.xml
<CustomField>
    <fullName>ResidentMoveInDate__c</fullName>
    <label>Resident Move-In Date</label>
    <type>Date</type>
</CustomField>