force-app/main/default/objects/ResidentLease__c/fields/ResidentMoveOutDate__c.field-meta.xml
<CustomField>
    <fullName>ResidentMoveOutDate__c</fullName>
    <label>Resident Move-Out Date</label>
    <type>Date</type>
</CustomField>